Changes for declarative security.